[gd_scene load_steps=5 format=3 uid="uid://lf8kjbmefjrg"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_og0d0"]
[ext_resource type="PackedScene" uid="uid://bhpqo55wijdg2" path="res://scenes/laser/laser.tscn" id="2_stg01"]
[ext_resource type="PackedScene" uid="uid://bwoycn5dtdxwq" path="res://scenes/pipe/pipe.tscn" id="3_msn1g"]
[ext_resource type="AudioStream" uid="uid://bpt7ai12cjbtq" path="res://assets/audio/score.wav" id="4_hmpgu"]

[node name="Pipes" type="Node2D" groups=["pipes"]]
script = ExtResource("1_og0d0")

[node name="Laser" parent="." instance=ExtResource("2_stg01")]

[node name="Lower" parent="." instance=ExtResource("3_msn1g")]
position = Vector2(0, 80)

[node name="Upper" parent="." instance=ExtResource("3_msn1g")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(100, 0)
rotation = -3.14159

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hmpgu")

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
